--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,10 +8,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true">
-        <activity android:name=".Player.PlayerTeamIndexActivity"/>
-        <activity android:name=".Player.PlayerTeamShowActivity"/>
-        <activity android:name=".TopActivity"/>
-
+        <activity android:name=".Team.TeamTeamIndexActivity"></activity>
+        <activity android:name=".Player.PlayerTeamIndexActivity" />
+        <activity android:name=".Player.PlayerTeamShowActivity" />
+        <activity android:name=".TopActivity" />
         <activity android:name=".LaunchActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
